# NPY_Finals

./: .gitignore  README.md  analysis_report.ipynb  poland_map.py  pyproject.toml  run_analysis.py
alco_analysis/: agg.py  correlation.py  features.py  heat_map.py  io.py  loading_data.py  mapa_koncesji.html  poland_map.py  quality.py  stats.py
data/: events.csv  miasta.csv  rezydenci_2023.xlsx
notebooks/: analysis_report.ipynb  mapa_koncesji.html
src/alco_analysis/: agg.py  io.py
tests/: data_samples.py  test_loading_data.py
tests/resources/: cities.csv  concession.csv  events.csv  rezydenci_2023.xlsx
