[project]
name = "alco-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.7",
    "ipykernel>=6.29.5",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "regex>=2024.11.6",
    "snakeviz>=2.2.2",
    "tabulate>=0.9.0",
    "unidecode>=1.4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["alco_analysis*"]
