[project]
name = "alco-analysis"
version = "0.2.0"
description = "Package for statistical analysis of Concession data from poland and finding correlation between them and fire events"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.7",
    "ipykernel>=6.29.5",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "regex>=2024.11.6",
    "scipy>=1.15.3",
    "snakeviz>=2.2.2",
    "streamlit>=1.46.0",
    "tabulate>=0.9.0",
    "unidecode>=1.4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["alco_analysis*"]
